--- a/.github/workflows/shrameshwar.yml
+++ b/.github/workflows/shrameshwar.yml
@@ -1,1 +1,36 @@
-new code will be writtten here
+name: Deployment
+on: 
+  push:
+    branches:
+      master
+env:
+  REPO_NAME:  mayank
+  ENV: dev
+  APP_NAME: testapp
+  IMAGE_NAME: testingnew
+jobs:
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+    - name: check out master branch
+      uses: actions/checkout@v3
+      with:
+        ref: master
+    -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+    -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+    -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: user/app:latest
