--- a/.github/workflows/shrameshwar.yml
+++ b/.github/workflows/shrameshwar.yml
@@ -33,4 +33,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: user/app:latest
+          tags: shrame1999/githubaction:v1
