--- a/.github/workflows/shrameshwar.yml
+++ b/.github/workflows/shrameshwar.yml
@@ -47,10 +47,10 @@ jobs:
         ref: 'main'
     -  
      name: Updating Deployment Image
-     run:
-       export IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-       echo $IMAGE_NAME
-       sed -i "s|mdhack/newhttpd.*$|$IMAGE_NAME|" deployment.yml
+     run: |
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo $IMAGE_NAME
+          sed -i "s|mdhack/newhttpd.*$|$IMAGE_NAME|" deployment.yml
     -
         name: Push To Repository
         run: |
